fix(css) When printing with flexbox align start

--- a/css/print.css
+++ b/css/print.css
@@ -84,4 +84,5 @@ body {
   box-sizing: border-box;
   display: flex;
   justify-content: center;
+  align-items: flex-start;
 }
